2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Use res instead of and to clear sign bit.

2011-09-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_fsgt.c,
	* device/lib/_fslt.c: test for -0.0
	* src/ds390/gen.c (toBoolean),
	* src/hc08/gen.c (asmopToBool),
	* src/mcs51/gen.c (toBoolean),
	* src/z80/gen.c (_toBoolean): ignore sign of float,
	  (aopDump): disabled unused code
	* support/regression/tests/float_single.c: enabled floorf(1.0-0.000001),
	  added NEG
	* support/regression/tests/bug3183823.c: new, added

2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug3401973.c:
	  Regression test for bug 3401973.

2011-09-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug1723128.c:
	  Disable failing regression test for hc08.

2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/hc08/gen.c,
	  src/SDCCast.c,
	  device/include/stdbool.h:
	  _Bool / bool for hc08.

2011-09-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCsymt.c,
	  src/SDCCpeeph.c:
	  Minor code cleanup.

2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi:
	  dont't include readline5.dll in 64bit package;
	  remove libgcc_s_sjlj-1.dll and libstdc++-6.dll on uninstallation;
	  don't install 64 bit version on 32 bit Windows;
	  use proper Program Files and registry for 64 bit installation
	* support/regression/ports/pic14/spec.mk,
	  support/regression/ports/pic16/spec.mk,
	  support/regression/ports/hc08/spec.mk,
	  support/regression/ports/ds390/spec.mk,
	  support/regression/ports/ucz80/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk:
	  configurable $(WINE)

2011-08-31 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: introduced WIN64 for 64bit dlls inclusion
